# orthoSynAssign_MAG

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
misc/: gff2bed.bash
src/: engine.rs  flank.rs  lib.rs  utils.rs
src/orthosynassign/: refine.py  score.py  visualize.py
src/orthosynassign/lib/: __init__.py  engine.py  flank_score.py  gene.py  hog.py  orthogroup.py  parsers.py  rs.pyi
src/orthosynassign/stats/: __init__.py  apply_model.py  calibrate.py  cv.py  mixed_effects.R  mixed_effects.py  permutation.py
tests/: engine_test.py  gene_test.py  parsers_test.py  refine_test.py
