[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "orthosynassign"
authors = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
maintainers = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
license = { file = "LICENSE" }
description = "Ortholog Synteny Assignment Tool for analyzing OrthoFinder results with genome annotations."
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = [
  "pygenomeviz>=1.6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pandas>=2.0.0",
  "pre-commit>=3.4.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
stats = [
  "scipy>=1.9.0",
  "scikit-learn>=1.3.0",
  "numpy>=2.0.0",
  "matplotlib>=3.7.0",
  "pandas>=2.0.0",
]

[project.scripts]
orthosynassign = "orthosynassign.refine:run_cli"
orthosynassign-vis = "orthosynassign.visualize:run_cli"
orthosynassign-score = "orthosynassign.score:run_cli"

[project.urls]
"Homepage" = "https://github.com/stajichlab/orthoSynAssign"
"Bug Tracker" = "https://github.com/stajichlab/orthoSynAssign/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "orthosynassign.lib.rs"
python-source = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -vv --cov=orthosynassign --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["orthosynassign"]
relative_files = true
omit = [
  "**/__init__.py",
  "**/_[^_]*.py",
  "tests/*.py",
  "exception.py",
]

[tool.coverage.report]
omit = [
  "**/__init__.py",
  "**/_[^_]*.py",
  "tests/*.py",
  "exception.py",
]
exclude_lines = [
  "pragma: no cover",
  "def _\\w+\\(",
  "async def _\\w+\\(",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E402", "E701"]
